--- a/src/components/pages/home/home.html
+++ b/src/components/pages/home/home.html
@@ -1,2 +1,7 @@
 <h1>Volleyball Website</h1>
 <btn [btnText]="'click me'"></btn>
+
+<div class="toolbar">
+  <button (click)="auth.login()">Login</button>
+  <button (click)="auth.logout()">Logout</button>
+</div>
